Fixed up document versions actions CSS to not wrap actions at default screen resolution
git-svn-id: http://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@28601 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/components/document-details/document-versions.css
+++ b/root/projects/slingshot/source/web/components/document-details/document-versions.css
@@ -30,7 +30,7 @@
 {
    margin-bottom: 0.5em;
    float: left;
-   width: 78%;
+   width: auto;
 }
 
 .document-versions .version-list h3 .document-version
@@ -41,7 +41,7 @@
 .document-versions .actions
 {
    float: right;
-   width: 20%;
+   width: 5em;
    text-align: right;
 }
 
